# productionizing-ML-projects-trial

./: README.md  main.py  pyproject.toml
src/: serve.py  train.py
